Refactor authentication and client management: update JWT secret, enhance LoginRequest and SignupRequest DTOs with validation, implement Client model with additional fields, and improve MailService for email handling.